<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="a">To:</string>
    <string name="app_name">Travelogue </string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="backup_ok"> Backup succeeded </string>
	<string name="backup_restore_settings">Save/Load travels from SD</string>
	<string name="backupButton"> Backup </string>
	<string name="backupText"> Use this button to save all of your travels (but NOT images) on the SD </string>
	<string name="change_travel"> Change Journey </string>
	<string name="choose_action"> Choose the action </string>
	<string name="choose_travel"> Choose the trip: </string>
	<string name="choose_what_to_restore"> detected conflict! \nYou can have only one active trip at a time. \nChoose between these options what to do </string>
	<string name="close_db_travel"> End the trip in progress </string>
	<string name="close_file_travel"> End the trip in the backup file </string>
	<string name="close_travel"> End the Trip  </string>
	<string name="data_partenza"> Do you Want to enter the date of departure?</string>
	<string name="data_saved">Saved Data</string>
	<string name="dataError">The date entered is not correct</string>
	<string name="delete"> Delete </string>
	<string name="delete_also_images"> Deletes also image files </string>
	<string name="delete_marker"> Delete the marker </string>
	<string name="description">Description:</string>
	<string name="edit_travel"> Edit the Journey </string>
	<string name="enable_timer"> Do you want to be notified every day how many days are left at the start? \nEnter the alarm time</string>
	<string name="error_data_loading"> Error </string>
	<string name="error_data_saving">Errors in data storage</string>
	<string name="error_delete_image">Impossibile rimuovere l\'ultima immagine del marker.</string>
	<string name="error_start_service"> Error! Failed to enable the registration service</string>
	<string name="gps_settings">GPS settings</string>
	<string name="gps_setting_info"> Select time </string>
	<string name="gps_settings_change"> Use this slider to set the minutes that elapse between the measurements of your position. \nTimes higher will save battery, but will give inaccurate results. </string>
	<string name="hello">Hello! Welcome to your personal Travelogue</string>
	<string name="help">Help</string>
	<string name="in_corso"> (in progress) </string>
	<string name="info"> Information </string>
	<string name="load"> Load </string>
	<string name="loading"> Loading ...</string>
	<string name="map">Map</string>
	<string name="map_type"> Map Type </string>
	<string name="marker_color"> Marker Color </string>
	<string name="merge_travels"> Merge two trips </string>
	<string name="minuti"> minutes </string>
	<string name="new_travel">New Travel</string>
	<string name="new_travel_wizard"> Wizard </string>
	<string name="next">&gt;</string>
	<string name="no">No</string>
	<string name="no_start_gps">Unable to start recording.\nAccess to GPS device failed</string>
	<string name="no_travels">No trip to display</string>
	<string name="ok">ok</string>
	<string name="photogallery">Photo Gallery</string>
	<string name="previous">&lt;</string>
	<string name="reset">Reset</string>
	<string name="restore_ok"> Restore succeeded </string>
	<string name="restoreButton"> Restore </string>
	<string name="restoreText"> Use this button to restore your data from a previous save </string>
	<string name="route_color"> Color Path </string>
	<string name="satellite_view">Satellite View</string>
	<string name="save">Save</string>
	<string name="saving"> Saving ...</string>
	<string name="service_not_started">Can not begin to record the location</string>
	<string name="service_started">Recording of the position started!</string>
	<string name="set_color">Set Color</string>
	<string name="settings">Settings</string>
	<string name="share"> Share </string>
	<string name="start_gps">Without having activated the GPS, application can not track your journey.\nDo you want to activate the GPS now? To return to application hits the back button. </string>
	<string name="start_service">Start recording</string>
	<string name="startNow">Start Now</string>
	<string name="stats_travel"> Travel Statistics </string>
	<string name="stop_service">Stop recording</string>
	<string name="street_view">Street View</string>
	<string name="timer_settings">Alarms settings</string>
	<string name="travel">Travel</string>
	<string name="travelName">Name of the travel:</string>
	<string name="wizard1">In a hurry? Start your journey now! \nOtherwise, please take a moment to configure it.</string>
	<string name="yes">Yes</string>
	<string name="zoomIn">+</string>
	<string name="zoomOut">-</string>
	<string name="are_you_sure_delete_travel"> Are you sure you want to delete this trip? </string>
	<string name="back_to_menu"> Back to main menu </string>
	<string name="close_travel_question">Are you sure you want to finish this journey? \nYou couldn\'t continue this later. </string>
	<string name="da"> From: </string>
	<string name="data"> Date: </string>
 	<string name="data_arrivo"> Travel Ending </string>
	<string name="date_stop_input"> Changing the end date of travel </string>
	<string name="delete_image"> Do your want to remove this picture? \nIt will also deleted from memory </string>
 	<string name="delete_travel"> Delete travel </string>
 	<string name="edit_points">Edit points </string>
	<string name="edit_start_date"> Change the start date of Travel </string>
 	<string name="failed_deleting_travel">Cancellation of the trip failed </string>
	<string name="giorni_mancanti"> There are only gg days and hh hours! </string>
	<string name="imposta"> Set </string>
	<string name="loading_travel"> Loading the journey ...</string>
	<string name="missing_date"> Date Missing </string>
	<string name="numero_immagini"> Number of Pictures: </string>
	<string name="photo"> Photos </string>
	<string name="problem_start_travel_after_start"> The date you selected is after the starting date of registration. \nIf you continue you will lose data (photos will NOT be deleted anyway). \ nDo you want to continue? </string>
	<string name="problem_start_travel_after_stop"> Error, the date of commencement of travel is later than the end. </string>
	<string name="problem_stop_travel"> The date you selected is older than the current one. \nIf you have registered a journey during that time some data will be lost. \nDo you want to continue? </string>
	<string name="problem_stop_travel_before_start"> The selected date is prior to the date of departure. </string>
	<string name="reg_problem_started_alert"> Not start recording, check if the GPS is on and starts recording from the main menu. </string>
	<string name="reg_started_alert"> Start recording the journey </string>
	<string name="reg_stop_alert"> Stop recording the journey </string>
	<string name="reload_to_change_color"> The new color has been saved. </string>
	<string name="remove_navigation"> Remove controls </string>
	<string name="restore_warning"> Warning! If you\'re taking a trip, this might clear it. \nAre you sure you want to continue? </string>
	<string name="select_crown"> Select the crown </string>
 	<string name="select_marker">Select marker </string>
 	<string name="set_alert"> Do you want to be notified when the application will use this option? </string>
	<string name="set_date">Set the date  </string>
	<string name="set_option"> Select the option </string>
	<string name="set_time"> Set the time </string>
	<string name="set_up_timer"> Enable the timer </string>
	<string name="stats_data_fine"> Ending Journey </string>
	<string name="stats_data_partenza"> Departure </string>
 	<string name="stats_distance">You have traveled:\n </string>
 	<string name="stats_period">You are traveling by:\n</string>
	<string name="stats_photo"> You have taken  </string>
	<string name="timer"> Alarm Management </string>
	<string name="ore">hours</string>
	<string name="giorni">days</string>
	<string name="configure">Configure travel before start</string>
	    
</resources>
