<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">
  	
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceLarge" 
    	android:layout_width="wrap_content"  
    	android:layout_height="wrap_content" 
    	android:layout_gravity="center_horizontal" 
    	android:layout_margin="@dimen/main_spaces" 
    	android:text="@string/settings">
    </TextView>
    
    <Button 
    	android:layout_margin="@dimen/main_spaces" 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:text="@string/gps_settings" 
    	android:onClick="gps">
    </Button>

    <Button
        android:layout_margin="@dimen/main_spaces" 
    	android:layout_height="wrap_content" 
    	android:layout_width="fill_parent" 
    	android:text="@string/backup_restore_settings" 
    	android:onClick="backup_restore">
    </Button>
    
    <Button 
		android:layout_margin="@dimen/main_spaces" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:text="@string/timer_settings" 
		android:onClick="timer">
	</Button>
</LinearLayout>
