<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:orientation="vertical"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:id="@+id/conflictLayout">
	    
	  	<Button 
	  	    android:id="@+id/close_db_travel" 
	  	    android:layout_margin="@dimen/main_spaces" 
	  	    android:layout_height="wrap_content" 
	  	    android:layout_width="fill_parent" 
	  	    android:text="@string/close_db_travel">
	  	</Button>
	  	
	    <Button 
	        android:id="@+id/close_file_travel" 
	        android:layout_margin="@dimen/main_spaces" 
	        android:layout_height="wrap_content" 
	        android:layout_width="fill_parent" 
	        android:text="@string/close_file_travel">
	    </Button>
	    
	    <Button 
	        android:id="@+id/merge_travels" 
	        android:layout_margin="@dimen/main_spaces" 
	        android:layout_height="wrap_content" 
	        android:layout_width="fill_parent" 
	        android:text="@string/merge_travels">
	    </Button>
	    
	</LinearLayout>
    
</RelativeLayout>
