<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:id="@+id/delete_marker_Layout">

    <CheckBox
        android:id="@+id/delete_also_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="@dimen/main_spaces"
        android:text="@string/delete_also_images" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/delete_marker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_spaces"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/no_delete_marker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_spaces"
            android:layout_weight="1"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>