<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
    <LinearLayout  
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_spaces"
            android:text="@string/timer"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <CheckBox
            android:id="@+id/checkBox_abilita_timer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_spaces"
            android:text="@string/set_up_timer" >
		</CheckBox>
        
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/main_spaces">
        </TimePicker>
        
        <Button
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_spaces"
            android:onClick="save"
            android:text="@string/save" >

        </Button>
    </LinearLayout> 
</ScrollView>
